@@ -30,6 +30,8 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-4951: Rename PIG_ATS_ENABLED constant (szita via daijy)
+
 PIG-5035: killJob API does not work in Tez (zjffdu via rohini)
 
 PIG-5032: Output record stats in Tez is wrong when there is split followed by union (rohini)
